samples/_failures_safe/1761664024_044c19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_21fe0b75.c: In function ‘print_token’:
./samples/SAFE/__tmp_21fe0b75.c:166:62: error: missing terminating " character
  166 |         "NUMBER", "IDENTIFIER", "OPERATOR", "STRING", "EOF", "IN
      |                                                              ^~~
./samples/SAFE/__tmp_21fe0b75.c:166:9: error: expected expression at end of input
  166 |         "NUMBER", "IDENTIFIER", "OPERATOR", "STRING", "EOF", "IN
      |         ^~~~~~~~
./samples/SAFE/__tmp_21fe0b75.c:166:9: error: expected declaration or statement at end of input
